got penaltys working for game_min, practice_min, pair

--- a/main.ipynb
+++ b/main.ipynb
@@ -434,14 +434,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File chosen = ShortExample.txt\n",
+      "File chosen = Shortexample.txt\n",
       "Integer inputs = [1, 1, 1, 1, 10, 10, 10, 10]\n",
       "['', ' \\nShortExample \\n\\n', ' \\nMO, 8:00, 3, 2 \\nMO, 9:00,3,2 \\nTU, 9:30, 2, 1 \\n\\n', ' \\nMO, 8:00, 4, 2 \\nTU, 10:00,2,1 \\nFR, 10:00, 2, 1 \\n\\n', ' \\nCMSA U13T3 DIV  01 \\nCMSA U13T3 DIV 02 \\nCUSA O18 DIV 01 \\nCMSA U17T1 DIV 01 \\n\\n', ' \\nCMSA U13T3 DIV 01 PRC 01 \\nCMSA U13T3 DIV 02 OPN 02 \\nCUSA O18 DIV 01 PRC 01 \\nCMSA U17T1 PRC 01 \\n\\n', ' \\nCMSA U13T3 DIV 01 PRC 01, CMSA U13T3 DIV 02 OPN 02 \\nCMSA U17T1 DIV 01, CMSA U13T3 DIV 01 \\nCMSA  U17T1 DIV 01, CMSA U13T3 DIV 02 \\nCMSA U17T1 PRC 01, CMSA U13T3 DIV 02 \\nCMSA U13T3 DIV 01, CMSA U17T1 PRC 01 \\n\\n', ' \\nCMSA U13T3 DIV 01, MO, 8:00 \\n\\n', ' \\nTU, 9:30, CMSA U13T3 DIV 01, 10 \\nMO, 8:00, CMSA U13T3 DIV   01 PRC 01, 3 \\nTU, 9:30, CMSA U13T3 DIV 02, 10 \\nTU, 10:00, CMSA U13T3 DIV 01 OPN 02, 5 \\nMO, 8:00, CMSA U13T3 DIV 02 OPN 02, 1 \\nMO, 10:00, CMSA U13T3 DIV 02 OPN 02, 7 \\n\\n', ' \\nCUSA O18 DIV 01, CMSA U17T1 DIV 01 \\n\\n', ' \\nCUSA O18 DIV 01, MO, 8:00 \\nCUSA O18 DIV 01 PRC 01, FR, 10:00']\n",
       "MO,8:00,3,2\n",
@@ -472,7 +472,11 @@
       "       Day Start Max Min Invalid_Assign Type\n",
       "MO8:00  MO  8:00   3   2             []    G\n",
       "MO9:00  MO  9:00   3   2             []    G\n",
-      "TU9:30  TU  9:30   2   1             []    G\n"
+      "TU9:30  TU  9:30   2   1             []    G\n",
+      "MO8:00    2\n",
+      "MO9:00    2\n",
+      "TU9:30    1\n",
+      "Name: Min, dtype: object\n"
      ]
     }
    ],
@@ -484,7 +488,9 @@
     "\n",
     "\n",
     "\n",
-    "print(game_slots)\n"
+    "print(game_slots)\n",
+    "\n",
+    "print(game_slots['Min'])\n"
    ]
   },
   {
@@ -496,65 +502,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "df['Assigned'] = CMSAU13T3DIV01         MO8:00\n",
-      "CMSAU13T3DIV02         MO8:00\n",
-      "CUSAO18DIV01           MO9:00\n",
-      "CMSAU17T1DIV01         MO8:00\n",
-      "CMSAU13T3DIV01PRC01    MO8:00\n",
-      "CMSAU13T3DIV02OPN02    MO8:00\n",
-      "CUSAO18DIV01PRC01      MO8:00\n",
-      "CMSAU17T1PRC01         MO8:00\n",
-      "Name: Assigned, dtype: object\n",
-      "slot = 'MO8:00'\n",
-      "slot = 'MO9:00'\n",
-      "slot = 'TU9:30'\n",
       "games_to_check_for_row = ['CMSAU17T1DIV01']\n",
-      "game in index\n",
-      "(var != v2) = True\n",
-      "the penalty is: 10\n",
-      "current_penalty = 5.0\n",
       "games_to_check_for_row = ['CUSAO18DIV01']\n",
-      "game in index\n",
-      "(var != v2) = True\n",
-      "the penalty is: 10\n",
-      "current_penalty = 10.0\n",
-      "slot_dict = {'MO8:00': 7, 'MO9:00': 1, 'TU9:30': 0}\n",
-      "df['Assigned'] = CMSAU13T3DIV01         MO8:00\n",
-      "CMSAU13T3DIV02         MO8:00\n",
-      "CUSAO18DIV01           MO9:00\n",
-      "CMSAU17T1DIV01         MO8:00\n",
-      "CMSAU13T3DIV01PRC01    MO8:00\n",
-      "CMSAU13T3DIV02OPN02    MO8:00\n",
-      "CUSAO18DIV01PRC01      MO8:00\n",
-      "CMSAU17T1PRC01         MO8:00\n",
-      "Name: Assigned, dtype: object\n",
-      "slot = 'MO8:00'\n",
-      "slot = 'MO9:00'\n",
-      "slot = 'TU9:30'\n",
-      "games_to_check_for_row = ['CMSAU17T1DIV01']\n",
-      "game in index\n",
-      "(var != v2) = True\n",
-      "the penalty is: 10\n",
-      "current_penalty = 5.0\n",
-      "games_to_check_for_row = ['CUSAO18DIV01']\n",
-      "game in index\n",
-      "(var != v2) = True\n",
-      "the penalty is: 10\n",
-      "current_penalty = 10.0\n",
-      "slot_dict = {'MO8:00': 7, 'MO9:00': 1, 'TU9:30': 0}\n"
+      "penalty_game_min_total = 20\n",
+      "penalty_prac_min_total = 40\n",
+      "total_penalty = 70.0\n"
      ]
     }
    ],
    "source": [
     "# Class of schedule\n",
     "debug_pair_with = True\n",
+    "test_stuff_debug = True\n",
+    "\n",
+    "\n",
     "class Schedule:\n",
     "    \n",
     "    def __init__(self):\n",
@@ -568,7 +536,7 @@
     "        return self.assignments\n",
     "        \n",
     "    def set_Eval(self):\n",
-    "        current_penalty = 0\n",
+    "        total_penalty = 0\n",
     "        total_df = events.copy()\n",
     "\n",
     "        total_df['Assigned'] = self.assignments['Slot']\n",
@@ -579,53 +547,45 @@
     "\n",
     "        filterRows = df[df['Assigned'] != \"\"]\n",
     "\n",
+    "        game_slot_dic = dict()\n",
+    "        prac_slot_dic = dict()\n",
     "\n",
-    "        print(f\"{df['Assigned'] = }\")\n",
-    "\n",
-    "        slot_dict = dict()\n",
-    "\n",
+    "        # keeping track of how many games are in each game slot for the game_min penalty\n",
     "        for slot in env.game_slots.index:\n",
+    "            game_slot_dic[slot] = 0\n",
     "\n",
-    "            print(f\"{slot = }\")\n",
-    "            slot_dict[slot] = 0\n",
+    "        # keeping track of how many practices are in each practice_slot for the practice_min penalty\n",
+    "        for slot in env.practice_slots.index:\n",
+    "            prac_slot_dic[slot] = 0\n",
     "\n",
     "        for row in filterRows.index:\n",
-    "            \n",
-    "            # example syntax\n",
-    "            # filtered_rows = df[df['Age'] > 30]\n",
     "\n",
-    "            # each row should have a assigned slot\n",
-    "\n",
-    "            # print(f\"the row is...................{df['Assigned'][row] =}\")\n",
-    "\n",
-    "            slot_dict[df['Assigned'][row]] += 1\n",
+    "            game_slot_dic[df['Assigned'][row]] += 1\n",
     "\n",
     "            if(debug_pair_with):\n",
     "\n",
     "                events_non_empty = events[events['Pair_with'].apply(lambda x: not isinstance(x, list) or len(x) > 0)]\n",
-    "                # print(f\"{type(events_non_empty['Pair_with'])}\")\n",
-    "                # print(f\"{events_non_empty['Pair_with'] = }\")\n",
     "                pair_with_dict = events_non_empty['Pair_with'].to_dict()\n",
     "            # this is doing the work for the pair_with penalty    \n",
     "            if pair_with_dict.get(row) is not None:\n",
     "                games_to_check_for_row = pair_with_dict.get(row)\n",
-    "                print(f\"{games_to_check_for_row = }\")\n",
+    "                if(test_stuff_debug):\n",
+    "                    print(f\"{games_to_check_for_row = }\")\n",
     "\n",
     "                # check that the games and the row have the same slot \n",
+    "                # todo one issuse if we have a game and a practice that are in a pair that could be annoying to check for \n",
     "                for game in games_to_check_for_row:\n",
     "                    if(game in filterRows.index):\n",
-    "                        print(\"game in index\")\n",
+    "                        \n",
     "                        # we have the game and we have the row check if game and row are the same or not\n",
     "                        var = df['Assigned'][row]\n",
     "                        v2 = df['Assigned'][game]\n",
-    "                        # print(f\"\\n\\n{var =}\\n\\n\")\n",
-    "                        # print(f\"\\n\\n{v2 =}\\n\\n\")\n",
-    "                        print(f\"{(var != v2) = }\")\n",
+    "                        \n",
     "                        if(var != v2):\n",
     "                            cal = env.pen_notpaired * env.w_pair\n",
-    "                            print(f\"the penalty is: {cal}\")\n",
-    "                            current_penalty += cal / 2\n",
-    "                            print(f\"{current_penalty = }\")\n",
+    "                            total_penalty += cal / 2\n",
+    "                            \n",
+    "\n",
     "                    else:\n",
     "                        print(\"game not in index\")\n",
     "        # end game pair stuff\n",
@@ -635,31 +595,60 @@
     "        # each game has a slot assigned lets assume a complete schedule\n",
     "        # we can make a dictionary of all the slots and then maybe fill in how many games that they have\n",
     "        # then we can apply the penalty at the end if they don't have the minimun\n",
-    "        env.pen_gamemin\n",
-    "        env.w_minfilled\n",
-    "        penalty_game_filled = env.pen_gamemin * env.w_minfilled   # max(0, (game_min - games) todo fill in the min filled difference by taking the max(0, (game_min - games))\n",
+    "\n",
+    "        # to dict \n",
+    "        # need a for loop here to go through each entry in the dict\n",
+    "\n",
+    "        #game min section\n",
+    "        def game_min_penalty():\n",
+    "            penalty_game_min_total = 0\n",
+    "            current_game_penalty = 0\n",
+    "            env.pen_gamemin\n",
+    "            env.w_minfilled\n",
+    "            game_slots_min = game_slots['Min'].to_dict()\n",
+    "            for slot in game_slot_dic:\n",
+    "                current_game_penalty = env.pen_gamemin * env.w_minfilled * max(0, int(game_slots_min[slot]) - game_slot_dic[slot] )   \n",
+    "                penalty_game_min_total += current_game_penalty\n",
+    "            print(f\"{penalty_game_min_total = }\")\n",
+    "\n",
+    "            return penalty_game_min_total\n",
+    "\n",
+    "        total_penalty = game_min_penalty() + total_penalty\n",
+    "            \n",
     "        \n",
-    "        print(f\"{slot_dict = }\")\n",
+    "        \n",
+    "\n",
+    "        def prac_min_penalty():\n",
+    "            penalty_prac_min_total = 0\n",
+    "            current_prac_penalty = 0\n",
+    "            env.pen_pracmin\n",
+    "            env.w_minfilled\n",
+    "            practice_slots_min = practice_slots['Min'].to_dict()\n",
+    "            for slot in prac_slot_dic:\n",
+    "                current_prac_penalty = env.pen_gamemin * env.w_minfilled * max(0, int(practice_slots_min[slot]) - prac_slot_dic[slot] )   \n",
+    "                penalty_prac_min_total += current_prac_penalty\n",
+    "            print(f\"{penalty_prac_min_total = }\")\n",
+    "            \n",
+    "            return penalty_prac_min_total\n",
+    "\n",
+    "        total_penalty = prac_min_penalty() + total_penalty\n",
     "        \n",
     "        \n",
     "        \n",
+    "        if(test_stuff_debug):\n",
+    "            print(f\"{total_penalty = }\")\n",
+    "\n",
+    "        self.eval = total_penalty\n",
     "    \n",
     "    def assign(self, slots):\n",
     "        self.assignments['Slot'] = slots\n",
-    "        # print(f\"{self.assignments['Slot'] = }\")\n",
-    "        self.set_Eval()\n",
     "        return self.eval\n",
-    "    \n",
     "    \n",
     "\n",
     "sched = Schedule()\n",
     "# print(sched.get_Starting())\n",
     "sched.assign([\"MO8:00\",\"MO8:00\",\"MO9:00\",\"MO8:00\",\"MO8:00\",\"MO8:00\",\"MO8:00\",\"MO8:00\"])\n",
-    "sched.set_Eval()\n",
-    "# CMSAU17T1DIV01\n",
-    "\n",
-    "# penalty practice min\n",
-    "# penalty game min"
+    "sched.set_Eval()\n"
    ]
   },
   {
