--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,15 +434,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File chosen = Shortexample.txt\n",
-      "Integer inputs = [1, 1, 1, 1, 10, 10, 10, 10]\n",
+      "File chosen = ShortExample.txt\n",
+      "Integer inputs = [0, 0, 0, 0, 10, 10, 10, 10]\n",
       "['', ' \\nShortExample \\n\\n', ' \\nMO, 8:00, 3, 2 \\nMO, 9:00,3,2 \\nTU, 9:30, 2, 1 \\n\\n', ' \\nMO, 8:00, 4, 2 \\nTU, 10:00,2,1 \\nFR, 10:00, 2, 1 \\n\\n', ' \\nCMSA U13T3 DIV  01 \\nCMSA U13T3 DIV 02 \\nCUSA O18 DIV 01 \\nCMSA U17T1 DIV 01 \\n\\n', ' \\nCMSA U13T3 DIV 01 PRC 01 \\nCMSA U13T3 DIV 02 OPN 02 \\nCUSA O18 DIV 01 PRC 01 \\nCMSA U17T1 PRC 01 \\n\\n', ' \\nCMSA U13T3 DIV 01 PRC 01, CMSA U13T3 DIV 02 OPN 02 \\nCMSA U17T1 DIV 01, CMSA U13T3 DIV 01 \\nCMSA  U17T1 DIV 01, CMSA U13T3 DIV 02 \\nCMSA U17T1 PRC 01, CMSA U13T3 DIV 02 \\nCMSA U13T3 DIV 01, CMSA U17T1 PRC 01 \\n\\n', ' \\nCMSA U13T3 DIV 01, MO, 8:00 \\n\\n', ' \\nTU, 9:30, CMSA U13T3 DIV 01, 10 \\nMO, 8:00, CMSA U13T3 DIV   01 PRC 01, 3 \\nTU, 9:30, CMSA U13T3 DIV 02, 10 \\nTU, 10:00, CMSA U13T3 DIV 01 OPN 02, 5 \\nMO, 8:00, CMSA U13T3 DIV 02 OPN 02, 1 \\nMO, 10:00, CMSA U13T3 DIV 02 OPN 02, 7 \\n\\n', ' \\nCUSA O18 DIV 01, CMSA U17T1 DIV 01 \\n\\n', ' \\nCUSA O18 DIV 01, MO, 8:00 \\nCUSA O18 DIV 01 PRC 01, FR, 10:00']\n",
       "MO,8:00,3,2\n",
       "MO,9:00,3,2\n",
@@ -469,14 +469,35 @@
       "CUSAO18DIV01,CMSAU17T1DIV01\n",
       "['CMSAU13T3DIV01', 'CMSAU13T3DIV02', 'CUSAO18DIV01', 'CMSAU17T1DIV01', 'CMSAU13T3DIV01PRC01', 'CMSAU13T3DIV02OPN02', 'CUSAO18DIV01PRC01', 'CMSAU17T1PRC01']\n",
       "[('CUSAO18DIV01', 'MO8:00'), ('CUSAO18DIV01PRC01', 'FR10:00')]\n",
-      "       Day Start Max Min Invalid_Assign Type\n",
-      "MO8:00  MO  8:00   3   2             []    G\n",
-      "MO9:00  MO  9:00   3   2             []    G\n",
-      "TU9:30  TU  9:30   2   1             []    G\n",
-      "MO8:00    2\n",
-      "MO9:00    2\n",
-      "TU9:30    1\n",
-      "Name: Min, dtype: object\n"
+      "                    League   Tier Div Practice_Type Num Type  Unwanted  \\\n",
+      "CMSAU13T3DIV01        CMSA  U13T3  01                      G  [MO8:00]   \n",
+      "CMSAU13T3DIV02        CMSA  U13T3  02                      G        []   \n",
+      "CUSAO18DIV01          CUSA    O18  01                      G        []   \n",
+      "CMSAU17T1DIV01        CMSA  U17T1  01                      G        []   \n",
+      "CMSAU13T3DIV01PRC01   CMSA  U13T3  01           PRC  01    P        []   \n",
+      "CMSAU13T3DIV02OPN02   CMSA  U13T3  02           OPN  02    P        []   \n",
+      "CUSAO18DIV01PRC01     CUSA    O18  01           PRC  01    P        []   \n",
+      "CMSAU17T1PRC01        CMSA  U17T1               PRC  01    P        []   \n",
+      "\n",
+      "                    Incompatible         Pair_with Part_assign     Pref  \\\n",
+      "CMSAU13T3DIV01                []                []          []   TU9:30   \n",
+      "CMSAU13T3DIV02                []                []          []   TU9:30   \n",
+      "CUSAO18DIV01                  []  [CMSAU17T1DIV01]      MO8:00            \n",
+      "CMSAU17T1DIV01                []    [CUSAO18DIV01]          []            \n",
+      "CMSAU13T3DIV01PRC01           []                []          []   MO8:00   \n",
+      "CMSAU13T3DIV02OPN02           []                []          []  MO10:00   \n",
+      "CUSAO18DIV01PRC01             []                []     FR10:00            \n",
+      "CMSAU17T1PRC01                []                []          []            \n",
+      "\n",
+      "                    Pref_value  \n",
+      "CMSAU13T3DIV01              10  \n",
+      "CMSAU13T3DIV02              10  \n",
+      "CUSAO18DIV01                 0  \n",
+      "CMSAU17T1DIV01               0  \n",
+      "CMSAU13T3DIV01PRC01          3  \n",
+      "CMSAU13T3DIV02OPN02          7  \n",
+      "CUSAO18DIV01PRC01            0  \n",
+      "CMSAU17T1PRC01               0  \n"
      ]
     }
    ],
@@ -488,9 +509,9 @@
     "\n",
     "\n",
     "\n",
-    "print(game_slots)\n",
+    "print(events)\n",
     "\n",
-    "print(game_slots['Min'])\n"
+    "# print(game_slots['Min'])\n"
    ]
   },
   {
@@ -502,18 +523,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CMSAU13T3DIV01          TU9:30\n",
+      "CMSAU13T3DIV02          TU9:30\n",
+      "CUSAO18DIV01                  \n",
+      "CMSAU17T1DIV01                \n",
+      "CMSAU13T3DIV01PRC01     MO8:00\n",
+      "CMSAU13T3DIV02OPN02    MO10:00\n",
+      "CUSAO18DIV01PRC01             \n",
+      "CMSAU17T1PRC01                \n",
+      "Name: Pref, dtype: object\n",
       "games_to_check_for_row = ['CMSAU17T1DIV01']\n",
       "games_to_check_for_row = ['CUSAO18DIV01']\n",
-      "penalty_game_min_total = 20\n",
-      "penalty_prac_min_total = 40\n",
-      "total_penalty = 70.0\n"
+      "penalty_game_min_total = 0\n",
+      "penalty_prac_min_total = 0\n",
+      "total_penalty = 0.0\n"
      ]
     }
    ],
@@ -544,7 +574,7 @@
     "        df = pd.merge(total_df, game_slots, how = 'left', left_on = 'Assigned', right_index = True)\n",
     "        df = pd.merge(df, practice_slots, how = 'left', left_on = 'Assigned', right_index = True)    \n",
     "        \n",
-    "\n",
+    "        # print(df['Pref'])\n",
     "        filterRows = df[df['Assigned'] != \"\"]\n",
     "\n",
     "        game_slot_dic = dict()\n",
@@ -588,8 +618,32 @@
     "\n",
     "                    else:\n",
     "                        print(\"game not in index\")\n",
-    "        # end game pair stuff\n",
     "\n",
+    "            # end game pair stuff\n",
+    "            \n",
+    "            # now we gotta do the fit pref\n",
+    "            # we need to get the preferred values for the games and practices\n",
+    "            # if the games and practices are not in their preferred slot, we add a penalty\n",
+    "            events_pref_non_empty = events[events['Pref'].apply(lambda x: not isinstance(x, list) or len(x) > 0)]\n",
+    "            pref_with_dict = events_pref_non_empty['Pref'].to_dict()\n",
+    "\n",
+    "            if pref_with_dict.get(row) is not None:\n",
+    "                slots_to_check = pref_with_dict.get(row)\n",
+    " \n",
+    "                # check that the games and the row have the same slot \n",
+    "                # todo one issuse if we have a game and a practice that are in a pair that could be annoying to check for \n",
+    "                for slot in slots_to_check:\n",
+    "                    if(slot in filterRows.index):\n",
+    "                        \n",
+    "                        # we have the game and we have the row check if game and row are the same or not\n",
+    "                        var = df['Assigned'][row]\n",
+    "                        v2 = df['Assigned'][slot]\n",
+    "                        \n",
+    "                        if(var != v2):\n",
+    "                            pen = env.w_pref * df['Pref_value'][slot]\n",
+    "                            total_penalty += pen\n",
+    "                            \n",
+    "                \n",
     "        # now lets figure out the slots and how many can go in each spot\n",
     "\n",
     "        # each game has a slot assigned lets assume a complete schedule\n",
@@ -633,6 +687,7 @@
     "\n",
     "        total_penalty = prac_min_penalty() + total_penalty\n",
     "        \n",
+    "            \n",
     "        \n",
     "        \n",
     "        if(test_stuff_debug):\n",
@@ -653,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +748,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -707,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
