making merging easier

--- a/fwert.ipynb
+++ b/fwert.ipynb
@@ -100,6 +100,7 @@
     "                f_select(self.heap)\n",
     "                return\n",
     "\n",
+    "# we needa keep in mind that we can get repeat schedules and we don't want that!\n",
     "    def processSchedules(self, limitOfSchedules):\n",
     "        \"\"\"\n",
     "        Main function to manage schedules. Determines the operation to perform and executes it.\n",
