--- a/fwert.ipynb
+++ b/fwert.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports for heap\n",
-    "from heapq import heapify, heappush, heappop, nlargest"
+    "from heapq import heapify, heappush, heappop, nlargest\n",
+    "# Import the f_select function\n",
+    "from f_select import f_select\n"
    ]
   },
   {
