made fitness section for eval

--- a/fwert.ipynb
+++ b/fwert.ipynb
@@ -2,19 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports for heap\n",
     "from heapq import heapify, heappush, heappop, nlargest\n",
+    "import random\n",
+    "import pandas as pd\n",
     "# Import the f_select function\n",
-    "from f_select import f_select\n"
+    "from f_select import f_select\n",
+    "# Import the generate schedule function\n",
+    "from orTree import OrTreeScheduler\n",
+    "from constr import Constr\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +79,22 @@
     "        match num:\n",
     "            case 0:  # Add a random schedule\n",
     "                # Generate a new schedule.\n",
-    "                newSchedule = OrTree.generateSchedule()\n",
+    "                # Load CSV with the first column as the index\n",
+    "                df_gslots = pd.read_csv('test_game_slots.csv', index_col=0)\n",
+    "                df_pslots = pd.read_csv('test_practice_slots.csv', index_col=0)\n",
+    "                df_events = pd.read_csv('test_events.csv', index_col=0)\n",
+    "\n",
+    "                game_slots = list(df_gslots.index)\n",
+    "                practice_slots = list(df_pslots.index)\n",
+    "                games = len(df_events[df_events.Type == 'G'].index)\n",
+    "                practices = len(df_events[df_events.Type == 'P'].index)\n",
+    "                env = None\n",
+    "\n",
+    "                constraints = Constr(df_gslots, df_pslots, df_events)\n",
+    "\n",
+    "                scheduler = OrTreeScheduler(game_slots, practice_slots, games, practices, constraints, env)\n",
+    "\n",
+    "                newSchedule = scheduler.generate_schedule()\n",
     "                # Add the new schedule to the heap.\n",
     "                heappush(self.heap, newSchedule)\n",
     "                heapify(self.heap)  # Convert the list into a valid heap structure\n",
@@ -125,9 +145,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fitness' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m limitOfSchedules \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m30\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Process schedules\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m processor\u001b[38;5;241m.\u001b[39mprocessSchedules(limitOfSchedules)\n",
+      "Cell \u001b[0;32mIn[21], line 117\u001b[0m, in \u001b[0;36mScheduleProcessor.processSchedules\u001b[0;34m(self, limitOfSchedules)\u001b[0m\n\u001b[1;32m    115\u001b[0m num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39massignNum(limitOfSchedules)\n\u001b[1;32m    116\u001b[0m \u001b[38;5;66;03m# Executes the determined operation ONCE\u001b[39;00m\n\u001b[0;32m--> 117\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfwert(num)\n",
+      "Cell \u001b[0;32mIn[21], line 92\u001b[0m, in \u001b[0;36mScheduleProcessor.fwert\u001b[0;34m(self, num)\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfwert\u001b[39m(\u001b[38;5;28mself\u001b[39m, num):\n\u001b[1;32m     45\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;124;03m    Executes one of the three operations based on the input operation code.\u001b[39;00m\n\u001b[1;32m     47\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;124;03m            2 -> Perform a selection operation.\u001b[39;00m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28;01mmatch\u001b[39;00m num:\n\u001b[1;32m     55\u001b[0m         \u001b[38;5;28;01mcase\u001b[39;00m \u001b[38;5;241m0\u001b[39m:  \u001b[38;5;66;03m# Add a random schedule\u001b[39;00m\n\u001b[1;32m     56\u001b[0m             \u001b[38;5;66;03m# Generate a new schedule.\u001b[39;00m\n\u001b[1;32m     57\u001b[0m             \u001b[38;5;66;03m# Load CSV with the first column as the index\u001b[39;00m\n\u001b[1;32m     58\u001b[0m             df_gslots \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest_game_slots.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index_col\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     59\u001b[0m             df_pslots \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest_practice_slots.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index_col\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     60\u001b[0m             df_events \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest_events.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index_col\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     61\u001b[0m \n\u001b[1;32m     62\u001b[0m             game_slots \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(df_gslots\u001b[38;5;241m.\u001b[39mindex)\n\u001b[1;32m     63\u001b[0m             practice_slots \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(df_pslots\u001b[38;5;241m.\u001b[39mindex)\n\u001b[1;32m     64\u001b[0m             games \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(df_events[df_events\u001b[38;5;241m.\u001b[39mType \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mG\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mindex)\n\u001b[1;32m     65\u001b[0m             practices \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(df_events[df_events\u001b[38;5;241m.\u001b[39mType \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mindex)\n\u001b[1;32m     66\u001b[0m             env \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     67\u001b[0m \n\u001b[1;32m     68\u001b[0m             constraints \u001b[38;5;241m=\u001b[39m Constr(df_gslots, df_pslots, df_events)\n\u001b[1;32m     69\u001b[0m \n\u001b[1;32m     70\u001b[0m             scheduler \u001b[38;5;241m=\u001b[39m OrTreeScheduler(game_slots, practice_slots, games, practices, constraints, env)\n\u001b[1;32m     71\u001b[0m \n\u001b[1;32m     72\u001b[0m             newSchedule \u001b[38;5;241m=\u001b[39m scheduler\u001b[38;5;241m.\u001b[39mgenerate_schedule()\n\u001b[1;32m     73\u001b[0m             \u001b[38;5;66;03m# Add the new schedule to the heap.\u001b[39;00m\n\u001b[1;32m     74\u001b[0m             heappush(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheap, newSchedule)\n\u001b[1;32m     75\u001b[0m             heapify(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheap)  \u001b[38;5;66;03m# Convert the list into a valid heap structure\u001b[39;00m\n\u001b[1;32m     76\u001b[0m \n\u001b[1;32m     77\u001b[0m             \u001b[38;5;66;03m# print(self.heap)\u001b[39;00m\n\u001b[1;32m     78\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m     79\u001b[0m \n\u001b[1;32m     80\u001b[0m         \u001b[38;5;28;01mcase\u001b[39;00m \u001b[38;5;241m1\u001b[39m:  \u001b[38;5;66;03m# Remove the worst schedule\u001b[39;00m\n\u001b[1;32m     81\u001b[0m             \u001b[38;5;66;03m# Remove the largest value in the heap (the worst schedule in a min heap).\u001b[39;00m\n\u001b[1;32m     82\u001b[0m             n_largest \u001b[38;5;241m=\u001b[39m nlargest(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheap)[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     83\u001b[0m             \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheap\u001b[38;5;241m.\u001b[39mremove(n_largest)  \u001b[38;5;66;03m# Remove by value\u001b[39;00m\n\u001b[1;32m     84\u001b[0m             heapify(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheap)  \u001b[38;5;66;03m# Convert the list into a valid heap structure\u001b[39;00m\n\u001b[1;32m     85\u001b[0m \n\u001b[1;32m     86\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheap)\n\u001b[1;32m     87\u001b[0m \n\u001b[1;32m     88\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m     89\u001b[0m \n\u001b[1;32m     90\u001b[0m         \u001b[38;5;28;01mcase\u001b[39;00m \u001b[38;5;241m2\u001b[39m:  \u001b[38;5;66;03m# Select the best schedule\u001b[39;00m\n\u001b[1;32m     91\u001b[0m             \u001b[38;5;66;03m# Call the selection function.\u001b[39;00m\n\u001b[0;32m---> 92\u001b[0m             f_select(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheap)\n\u001b[1;32m     93\u001b[0m             heapify(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheap)  \u001b[38;5;66;03m# Convert the list into a valid heap structure\u001b[39;00m\n\u001b[1;32m     94\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m     95\u001b[0m \n\u001b[1;32m     96\u001b[0m         \u001b[38;5;28;01mcase\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01m_\u001b[39;00m:  \u001b[38;5;66;03m# Default case: also perform selection\u001b[39;00m\n\u001b[1;32m     97\u001b[0m             f_select(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheap)\n\u001b[1;32m     98\u001b[0m             heapify(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheap)  \u001b[38;5;66;03m# Convert the list into a valid heap structure\u001b[39;00m\n\u001b[1;32m     99\u001b[0m \n\u001b[1;32m    100\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/GitHub/SolarCar/SolarCarWorkspace/LeagueScheduleSearch/f_select.py:16\u001b[0m, in \u001b[0;36mf_select\u001b[0;34m(current_state)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124;03mf_select function to select a transition from the given state based on the probabilities.\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124;03m\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;124;03m    a new schedule by calling either mutate or crossover?\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Calculate the total fitness of all schedules in the current state\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m total_fitness \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(fitness(schedule) \u001b[38;5;28;01mfor\u001b[39;00m schedule \u001b[38;5;129;01min\u001b[39;00m current_state)\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# Calculate the inverted probability for each schedule(as lower fitness is better)\u001b[39;00m\n\u001b[1;32m     19\u001b[0m probabilities \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m (fitness(schedule) \u001b[38;5;241m/\u001b[39m total_fitness) \u001b[38;5;28;01mfor\u001b[39;00m schedule \u001b[38;5;129;01min\u001b[39;00m current_state]\n",
+      "File \u001b[0;32m~/Documents/GitHub/SolarCar/SolarCarWorkspace/LeagueScheduleSearch/f_select.py:16\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124;03mf_select function to select a transition from the given state based on the probabilities.\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124;03m\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;124;03m    a new schedule by calling either mutate or crossover?\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Calculate the total fitness of all schedules in the current state\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m total_fitness \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(fitness(schedule) \u001b[38;5;28;01mfor\u001b[39;00m schedule \u001b[38;5;129;01min\u001b[39;00m current_state)\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# Calculate the inverted probability for each schedule(as lower fitness is better)\u001b[39;00m\n\u001b[1;32m     19\u001b[0m probabilities \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m (fitness(schedule) \u001b[38;5;241m/\u001b[39m total_fitness) \u001b[38;5;28;01mfor\u001b[39;00m schedule \u001b[38;5;129;01min\u001b[39;00m current_state]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fitness' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Example usage\n",
     "if __name__ == \"__main__\":\n",
