Adjusted slot diff penalty
Compared and adjusted slot diff's algorithm.

Co-Authored-By: Khadeeja Abbas <khadeeja.abbas@ucalgary.ca>

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
      "output_type": "stream",
      "text": [
       "File chosen = Jamie.txt\n",
-      "Integer inputs = [1, 2, 1, 2, 5, 5, 5, 5]\n",
+      "Integer inputs = [1, 0, 1, 0, 10, 10, 10, 10]\n",
       "\n",
       "Processed 3 G slots: \n",
       "        Day Start Max Min Invalid_Assign Type\n",
@@ -563,11 +563,33 @@
       "CUSAO18DIV01PRC01     CUSA    O18  01           PRC  01    P\n",
       "CMSAU17T1PRC01        CMSA  U17T1               PRC  01    P\n",
       "\n",
-      "Special practices:            League    Tier Div Practice_Type Num Type\n",
+      "                  League Tier Div Practice_Type Num Type Unwanted  \\\n",
+      "CUSAO18DIV01        CUSA  O18  01                      G       []   \n",
+      "CUSAO18DIV01PRC01   CUSA  O18  01           PRC  01    P       []   \n",
+      "\n",
+      "                  Incompatible         Pair_with Preference Part_assign  \n",
+      "CUSAO18DIV01                []  [CMSAU17T1DIV01]         []      MO8:00  \n",
+      "CUSAO18DIV01PRC01           []                []         []     FR10:00  \n",
+      "Special practices: \n",
+      "           League    Tier Div Practice_Type Num Type\n",
       "LeagueTier                                          \n",
       "CMSAU13T1S   CMSA  U13T1S                          P\n",
       "\n",
-      "Unwanted slots: CMSAU13T1DIV01         [MO8:00]\n",
+      "Not compatible: \n",
+      "CMSAU13T1DIV01         []\n",
+      "CMSAU13T3DIV02         []\n",
+      "CUSAO18DIV01           []\n",
+      "CMSAU17T1DIV01         []\n",
+      "CMSAU13T1DIV01PRC01    []\n",
+      "CMSAU13T1DIV01OPN02    []\n",
+      "CMSAU13T3DIV02OPN02    []\n",
+      "CUSAO18DIV01PRC01      []\n",
+      "CMSAU17T1PRC01         []\n",
+      "CMSAU13T1S             []\n",
+      "Name: Incompatible, dtype: object\n",
+      "\n",
+      "Unwanted slots: \n",
+      "CMSAU13T1DIV01         [MO8:00]\n",
       "CMSAU13T3DIV02               []\n",
       "CUSAO18DIV01                 []\n",
       "CMSAU17T1DIV01               []\n",
@@ -579,7 +601,8 @@
       "CMSAU13T1S                   []\n",
       "Name: Unwanted, dtype: object\n",
       "\n",
-      "Preferences: CMSAU13T1DIV01                      [(TU9:30, 10)]\n",
+      "Preferences: \n",
+      "CMSAU13T1DIV01                      [(TU9:30, 10)]\n",
       "CMSAU13T3DIV02                      [(TU9:30, 10)]\n",
       "CUSAO18DIV01                                    []\n",
       "CMSAU17T1DIV01                                  []\n",
@@ -591,7 +614,8 @@
       "CMSAU13T1S                                      []\n",
       "Name: Preference, dtype: object\n",
       "\n",
-      "Pairs: CMSAU13T1DIV01                       []\n",
+      "Pairs: \n",
+      "CMSAU13T1DIV01                       []\n",
       "CMSAU13T3DIV02                       []\n",
       "CUSAO18DIV01           [CMSAU17T1DIV01]\n",
       "CMSAU17T1DIV01           [CUSAO18DIV01]\n",
@@ -604,13 +628,6 @@
       "Name: Pair_with, dtype: object\n",
       "\n",
       "Partial Assignments: [('CUSAO18DIV01', 'MO8:00'), ('CUSAO18DIV01PRC01', 'FR10:00')]\n",
-      "                  League Tier Div Practice_Type Num Type Unwanted  \\\n",
-      "CUSAO18DIV01        CUSA  O18  01                      G       []   \n",
-      "CUSAO18DIV01PRC01   CUSA  O18  01           PRC  01    P       []   \n",
-      "\n",
-      "                  Incompatible         Pair_with Preference Part_assign  \n",
-      "CUSAO18DIV01                []  [CMSAU17T1DIV01]         []      MO8:00  \n",
-      "CUSAO18DIV01PRC01           []                []         []     FR10:00  \n",
       "                    League    Tier Div Practice_Type Num Type  Unwanted  \\\n",
       "CMSAU13T1DIV01        CMSA   U13T1  01                      G  [MO8:00]   \n",
       "CMSAU13T3DIV02        CMSA   U13T3  02                      G        []   \n",
@@ -671,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -680,9 +697,9 @@
      "text": [
       "games_to_check_for_row = ['CMSAU17T1DIV01']\n",
       "games_to_check_for_row = ['CUSAO18DIV01']\n",
-      "penalty_game_min_total = 10\n",
-      "penalty_prac_min_total = 20\n",
-      "total_penalty = 35.0\n"
+      "penalty_game_min_total = 20\n",
+      "penalty_prac_min_total = 40\n",
+      "total_penalty = 290.0\n"
      ]
     }
    ],
@@ -797,7 +814,7 @@
     "                        \n",
     "                        # Apply penalty if two games with the same division are in the same slot\n",
     "                        if sections_to_check == other_division and assigned_slot == other_assigned_slot:\n",
-    "                            penalty += env.pen_section  # Adding half to account for double-counting in both loops\n",
+    "                            total_penalty += env.pen_section  # Adding half to account for double-counting in both loops\n",
     "                            \n",
     "                    # if section in filterRows.index:\n",
     "                    #     assigned_section = df.loc[row, 'Assigned']\n",
@@ -875,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
